microservice architecture: end-to-end test and corrections
