# src/main/resources/api/openapi.yaml
@@ -157,7 +157,7 @@ paths:
         404:
           description: Order not found
           content: { }
-  /api/v1/customers/:
+  /api/v1/customers:
     post:
       tags:
         - Customer
@@ -286,7 +286,7 @@ paths:
         404:
           description: Customer not found
           content: { }
-  /api/v1/products/:
+  /api/v1/products:
     post:
       tags:
         - Product
@@ -461,7 +461,7 @@ components:
         phone:
           description: Customer contact ph.
           type: string
-        userStatus:
+        customerStatus:
           description: Reflect the customer status in the system - active || inactive
           type: string
 #        orders:
@@ -494,9 +494,10 @@ components:
           items:
             $ref: '#/components/schemas/Item'
         total:
-          description: Order total
-          type: number
-          format: double
+          # description: Order total
+#          type: number
+#          format: double
+          $ref: '#/components/schemas/BigDecimal'
         status:
           description: Describe the order state
           type: string
@@ -536,9 +537,10 @@ components:
           description: Image URL
           type: string
         basePrice:
-          description: Base product price, before taxes applied
-          type: number
-          format: double
+          # description: Base product price, before taxes applied
+#          type: number
+#          format: double
+          $ref: '#/components/schemas/BigDecimal'
     NewOrder:
       description: Contains the new order request information
       type: object
@@ -553,3 +555,6 @@ components:
             $ref: '#/components/schemas/Item'
       xml:
         name: NewOrder
+    BigDecimal:
+      type: string
+      format: bigdecimal
